#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package ParCorAna
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-16:
- previous fix for mult servers slowed things down, server reads were not running in parrallel
- fixed this, see comments in JIRA PSAS-161 - servers now read next array after reporting ready,
  assumption is master will probably pick a different server to scatter
- added print of EventData, added class ScatterDataQueue
  
	
Tag: V00-00-15:
- fix issues with multiple servers: JIRA PSAS-161
  wait for all servers to by ready
  fix bug with selection earliest time
- use 6 servers for unit tests, compare to alt test with 1 server
- change cmp tool to ignore differences in numservers between alttest and maintest
- fix bug with saving finecolor file using parCorAnaMaskColorTool - it was just the color file before
	
Tag: V00-00-14:
- fix bug with writing mask/color files to h5 file.
- add documention on finecolor
	
Tag: V00-00-13:
- add finecolor
 
	
Tag: V00-00-12:
- move import of matplotlib.plt to remove warning message about fork() Jira PSAS-163
	
Tag: V00-00-11:
- optimizations to get to real time with full cspad Jira PSAS-162:
-- change from float64 to float32 to speed up scatter and gather
-- specify 'float' type for psana NDArray modules
-- move server copy of masked pixels so it doesn't block workers
- This introduces change in UserG2 code for users	
- fix bug with formatFileName and %C
- start to undo circular inclusions of ParCorAna in src files
	
Tag: V00-00-09:
- fix bug with overriding system_parms via command line arguments
- improve error/diagnostic messages
	
Tag: V00-00-08:
- add MPI_Barrier with output to driver to check for MPI problems 